--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <meta name="csrf-token" content="dummy-csrf-token">
   </head>
   <body>
     <noscript>
